更新插件版本